--- a/pages/follow/list.wxml
+++ b/pages/follow/list.wxml
@@ -14,7 +14,7 @@
     <view class="bg-white padding text-content solid-bottom" wx:if="{{open==index}}">
       {{item.content.msg||'无'}}
     </view>
-  </block> 
+  </block>
 </view>
 <view class="padding-xl flex flex-direction footer">
   <button class="cu-btn bg-main round padding-tb-xl margin-xl" bindtap="modalStatus" data-name="follow">记录随访</button>
@@ -23,6 +23,8 @@
 <view class="cu-modal show" wx:if="{{modalfollow}}">
   <form bindsubmit="submit">
     <input name="patientId" value="{{patient.id}}" hidden></input>
+    
+    
     <view class="cu-dialog bg-white padding text-left">
       <view class="cu-bar bg-white justify-end">
         <view class="content">患者随访</view>
@@ -40,13 +42,29 @@
         </view>
         <view class="action padding-right text-underline" bindtap="toUrl" data-url="/pages/diabetes/patient/info?id={{patient.id}}">更多信息</view>
       </view>
+
       <view class="padding">
+        <view class="cu-list menu solid-top solid-bottom" bindtap="toUrl" data-url="/pages/follow/form?patientId={{patient.id}}">
+          <view class="cu-item arrow">
+            <view class="content">
+              <text class="">量表提交</text>
+            </view>
+            <view class="action">
+              <text class="text-grey text-sm">{{formAnswer.score}}</text>
+            </view>
+          </view>
+        </view>
+        <picker name="content.formAnswer" value="{{formAnswer}}" hidden></picker>
         <view class="">随访需要询问的内容如下：</view>
         <view class="margin-top-sm">
           症状、体重、血压、用药情况、空腹和餐后血糖、自我管理情况等内容
         </view>
         <textarea name="content.msg" class="solid padding margin-top" style="min-height: 200rpx;width: 100%;" maxlength="-1" placeholder="如需记录随访信息,请在此输入"></textarea>
       </view>
+
+
+
+
       <view class="padding flex justify-between align-center bg-white">
         <button style="width: 40%;" class="cu-btn bg-main lg" bindtap="call" data-phone="{{patient.phone}}">拨打电话</button>
         <button style="width: 40%;" class="cu-btn bg-main lg" form-type="submit">确定</button>
