--- a/pages/diabetes/patient/scanResult.wxss
+++ b/pages/diabetes/patient/scanResult.wxss
@@ -30,6 +30,7 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp:2;
   line-height: 1.4;
+  user-select:none;
 }
 .line2 view{
   line-height: 1.4;
@@ -44,4 +45,14 @@
   border-color: var(--blue);
   border-width: 2rpx;
   border-style:dashed;
+}
+
+.mask{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 11;
+  background-color: var(--white);
 }
