--- a/pages/respiratory/report/form.wxml
+++ b/pages/respiratory/report/form.wxml
@@ -6,18 +6,18 @@
         </view>
       </view>
       <view class="action">
-        <view class="text-right">{{reportForm.content.lcq.sum}}</view>
+        <view class="text-right">{{reportForm.lcq.sum}}</view>
       </view>
     </view>
 
-    <view class="cu-item " wx:for="{{coughQuestions}}" wx:if="{{reportForm.content.lcq.sum>0 && open==0}}">
+    <view class="cu-item " wx:for="{{coughQuestions}}" wx:if="{{reportForm.lcq.sum>0 && open==0}}">
       <view class="content padding-tb-sm">
         <view>
           {{item.title}}
         </view>
       </view>
       <view class="action">
-        <view class="text-right">{{reportForm.content.lcq.result[index].score}}</view>
+        <view class="text-right">{{reportForm.lcq.result[index].score}}</view>
       </view>
     </view>
 
@@ -29,7 +29,7 @@
         </view>
       </view>
       <view class="action">
-        <view class="text-right">{{reportForm.content.sobq.sum}}</view>
+        <view class="text-right">{{reportForm.sobq.sum}}</view>
       </view>
     </view>
 
@@ -40,7 +40,7 @@
         </view>
       </view>
       <view class="action">
-        <view class="text-right">{{reportForm.content.sobq.result[index]}}</view>
+        <view class="text-right">{{reportForm.sobq.result[index]}}</view>
       </view>
     </view>
 
