--- a/pages/diabetes/patient/info.wxml
+++ b/pages/diabetes/patient/info.wxml
@@ -254,8 +254,7 @@
 </block>
 
 
-
-<view class="cu-bar bg-gray">
+<view class="cu-bar bg-gray" wx:if="{{info.groupId==null || info.groupId==2}}">
   <view class="action">
     <text class="cuIcon-title text-blue"></text>绑定二维码
   </view>
